--- a/example show how to use SDK/index.html
+++ b/example show how to use SDK/index.html
@@ -4,9 +4,21 @@
 
 <meta charset="utf-8" />
 <title>example show how to use SDK</title>
-
+<meta name="keywords" content="URL2io,正文提取,SDK,Python,使用教程">
+<meta name="description" content="URL2io-python-SDK使用教程: 演示通过 SDK 的方式来调用 URL2Article 服务。">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<!-- GA -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-84535934-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <style type="text/css">
     /*!
